--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
             font-family: Roboto;
             font-style: normal;
             font-weight: 100;
-            src: url(/images/roboto_light.ttf) format("truetype");
+            src: url(https://github.com/JebacDISKa/asddad32/blob/main/images/roboto_light.ttf) format("truetype");
         }
 
         @font-face {
@@ -360,7 +360,7 @@ header {
                     <div class="Home_cardCover__Xmdu7">
                         <div class="Home_coverText__rZqvF">
                             <p style="font-size: 1em; margin: 0; font-weight: 400; font-weight: bold;">mDowód</p>
-                            <img src="/images/ic_arrow_forward_Dgray.svg" alt="go" width="17" height="17">
+                            <img src="https://github.com/JebacDISKa/asddad32/blob/main/images/arrow1.svg" alt="go" width="17" height="17">
                         </div>
                     </div>
                 </div>
@@ -379,14 +379,14 @@ header {
                 <div class="Home_serviceRow__A7Msu">
                     <div class="Home_service__yPHMD" onclick="window.location.href='dashboard.html'">
                         <div class="Home_serviceBox__UBneT">
-                            <img src="/images/da035_bezpiecznie_w_sieci.svg" alt="ID" width="30" height="30">
+                            <img src="https://github.com/JebacDISKa/asddad32/blob/main/images/arrow1.svg" alt="ID" width="30" height="30">
                         </div>
                         <p>Bezpiecznie w sieci</p>
                     </div>
 
                     <div class="Home_service__yPHMD" onclick="window.location.href='dashboard.html'">
                         <div class="Home_serviceBox__UBneT">
-                            <img src="/images/auto.png" alt="ID" width="30" height="30">
+                            <img src="https://github.com/JebacDISKa/asddad32/blob/main/images/arrow1.svg" alt="ID" width="30" height="30">
                         </div>
                         <p>Historia<br>Pojazdu</p>
                     </div>
