--- a/dashboard.html
+++ b/dashboard.html
@@ -66,21 +66,21 @@
             font-family: Roboto;
             font-style: normal;
             font-weight: 300;
-            src: url(/images/roboto_regular.ttf) format("truetype");
+            src: url(images/aa008_change_password.svg) format("truetype");
         }
 
         @font-face {
             font-family: Roboto;
             font-style: normal;
             font-weight: 400;
-            src: url(/images/roboto_medium.ttf) format("truetype");
+            src: url(images/aa008_change_password.svg) format("truetype");
         }
 
         @font-face {
             font-family: Roboto;
             font-style: italic;
             font-weight: 400;
-            src: url(/images/roboto_medium_italic.ttf) format("truetype");
+            src: url(images/aa008_change_password.svg) format("truetype");
         }
 
         @font-face {
@@ -94,7 +94,7 @@
             font-family: Roboto;
             font-style: normal;
             font-weight: 700;
-            src: url(/images/roboto_black.ttf) format("truetype");
+            src: url(images/aa008_change_password.svg) format("truetype");
         }
 
         @font-face {
@@ -355,12 +355,12 @@ header {
                 </div>
 
                 <div class="Home_card__E5spL" onclick="window.location.href='dowodnowy.html'">
-                    <img src="/images/coi_common_ui_ic_document_id.svg" alt="document-icon" width="25" height="25" class="Home_cardOverlayIcon__CiSnq">
-                    <img src="/images/CHANGE_IT_home_mid_card.svg" alt="mid" style="width: 18.5em; height: auto; border-radius: 1em;">
+                    <img src="images/aa008_change_password.svg" alt="document-icon" width="25" height="25" class="Home_cardOverlayIcon__CiSnq">
+                    <img src="images/aa008_change_password.svg" alt="mid" style="width: 18.5em; height: auto; border-radius: 1em;">
                     <div class="Home_cardCover__Xmdu7">
                         <div class="Home_coverText__rZqvF">
                             <p style="font-size: 1em; margin: 0; font-weight: 400; font-weight: bold;">mDowód</p>
-                            <img src="https://github.com/JebacDISKa/asddad32/blob/main/images/arrow1.svg" alt="go" width="17" height="17">
+                            <img src="images/aa008_change_password.svg" alt="go" width="17" height="17">
                         </div>
                     </div>
                 </div>
@@ -386,7 +386,7 @@ header {
 
                     <div class="Home_service__yPHMD" onclick="window.location.href='dashboard.html'">
                         <div class="Home_serviceBox__UBneT">
-                            <img src="https://github.com/JebacDISKa/asddad32/blob/main/images/arrow1.svg" alt="ID" width="30" height="30">
+                            <img src="images/aa008_change_password.svg" alt="ID" width="30" height="30">
                         </div>
                         <p>Historia<br>Pojazdu</p>
                     </div>
@@ -402,7 +402,7 @@ header {
                 <div class="Home_serviceRow__A7Msu">
                     <div class="Home_service__yPHMD" onclick="window.location.href='dashboard.html'">
                         <div class="Home_serviceBox__UBneT">
-                            <img src="/images/da031_mbiznes.svg" alt="ID" width="30" height="30">
+                            <img src="images/aa008_change_password.svg" alt="ID" width="30" height="30">
                         </div>
                         <p>Firma</p>
                     </div>
